--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
-<%- include("header.ejs") -%>
+<%- include("partials/header") -%>
 
 <h1>Home</h1>
 
 <p><%= content %></p>
 
-<%- include("footer.ejs") -%>
+<%- include("partials/footer") -%>
