--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+html {
+
+}
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -32,4 +35,14 @@
 	margin-top: 25px;
 	font-size: 12px;
   color: #fff;
+}
+
+#contentInput {
+    resize: vertical;
+    min-height: 50px;
+    max-height: 150px;
+}
+
+.footer {
+    
 }
