--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -3,8 +3,15 @@
 <h1>Compose</h1>
 
 <form action="/compose" method="post">
-    <input type="text" name="contentInput" placeholder="Input content">
-    <button type="submit" name="content-submit">Add content</button>
+    <div class="form-group">
+        <label>Title</label>
+        <input class="form-control" type="text" name="postTitle" placeholder="Input title">
+    </div>
+    <div class="form-group">
+        <label>Post</label>
+        <textarea class="form-control" id="contentInput" rows="3" type="text" name="postBody" placeholder="Input content"></textarea>
+    </div>
+    <button type="submit" name="content-submit" class="btn btn-primary">Publish</button>
 </form>
 
 <%- include("partials/footer") -%>
