--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,17 @@
 <%- include("partials/header") -%>
 
-<h1>Home</h1>
+    <h1>Home</h1>
 
-<p><%= content %></p>
+    <p><%= content %></p>
+
+    <div class="container">
+        <% newPosts.forEach((post) => { %>
+            <h2><%= post.title %></h2>
+            <p>
+                <%= post.content.substring(0, 100) + "..." %>
+                <a href="/posts/<%=post.title%>">Read more</a>
+            </p>
+        <% }); %>
+    </div>
 
 <%- include("partials/footer") -%>
